[package]
name = "sponsorblock-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls", "rustls-tls"] }
serde = "1.0.183"
serde_derive = "1.0.183"
sha2 = "0.10.7"
url = "2.4.0"
