[package]
name = "sponsorblock-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.198"
serde_derive = "1.0.198"
sha2 = "0.10.8"
url = "2.5.0"
